--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,6 +104,19 @@
                 android:layout_height="@dimen/indiasupply_logo_height"
                 android:layout_alignParentBottom="true">
 
+
+                <TextView
+                    android:id="@+id/tvRefreshData"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/activity_margin_small"
+                    android:drawableLeft="@drawable/ic_refresh"
+                    android:gravity="center_vertical"
+                    android:text="Refresh Data"
+                    android:textColor="@color/app_text_color_dark"
+                />
+
                 <ImageView
                     android:id="@+id/ivIndiaSupplyLogo"
                     android:layout_width="@dimen/indiasupply_logo_width"
