--- a/app/src/main/res/layout/activity_event_list.xml
+++ b/app/src/main/res/layout/activity_event_list.xml
@@ -2,11 +2,11 @@
 <android.support.design.widget.CoordinatorLayout
     android:id="@+id/clMain"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@color/app_background"
->
+    android:background="@color/app_background">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,85 +20,102 @@
             android:animateLayoutChanges="true"
             android:theme="@style/AppTheme.AppBarOverlay"
             android:visibility="visible">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar1"
-                style="@style/Widget.MyApp.ActionBar"
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:animateLayoutChanges="true"
-                android:background="@color/colorPrimary">
-
-                <RelativeLayout
-                    android:id="@+id/toolbar_layout"
+                android:layout_height="match_parent">
+                <com.daimajia.slider.library.SliderLayout
+                    android:id="@+id/slider"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="@dimen/home_slider_height"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    app:auto_cycle="true"
+                    app:pager_animation="Accordion"
+                    app:pager_animation_span="500"/>
+                <com.daimajia.slider.library.Indicators.PagerIndicator
+                    android:id="@+id/custom_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/slider"
+                    android:gravity="center"/>
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar1"
+                    style="@style/Widget.MyApp.ActionBar"
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
+                    android:background="@drawable/toolbar_bg"
+                    app:layout_collapseMode="pin"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">
 
-
-                    <ImageView
-                        android:id="@+id/ivBack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:paddingBottom="@dimen/activity_margin_small"
-                        android:paddingTop="@dimen/activity_margin_small"
-                        android:src="@drawable/ic_back"
-                        android:visibility="visible"/>
-                    <TextView
-                        android:id="@+id/tvTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="@dimen/activity_margin"
-                        android:layout_marginStart="@dimen/activity_margin"
-                        android:layout_toEndOf="@+id/ivBack"
-                        android:layout_toLeftOf="@+id/ivSort"
-                        android:layout_toRightOf="@+id/ivBack"
-                        android:layout_toStartOf="@+id/ivSort"
-                        android:gravity="left"
-                        android:text="@string/activity_event_list_title"
-                        android:textColor="@color/text_color_white"
-                        android:textSize="@dimen/text_size_large"
-                        android:textStyle="bold"/>
-
-                    <android.support.v7.widget.SearchView
-                        android:id="@+id/searchView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:gravity="end"
-                        android:searchIcon="@drawable/ic_search"/>
-                    <ImageView
-                        android:id="@+id/ivFilter"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@+id/searchView"
-                        android:paddingBottom="@dimen/activity_margin_small"
-                        android:paddingTop="@dimen/activity_margin_small"
-                        android:src="@drawable/ic_filter"
-                        android:visibility="gone"/>
-                    <ImageView
-                        android:id="@+id/ivSort"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@+id/ivFilter"
-                        android:layout_toStartOf="@+id/ivFilter"
-                        android:paddingBottom="@dimen/activity_margin_small"
-                        android:paddingEnd="@dimen/activity_margin_small"
-                        android:paddingLeft="0dp"
-                        android:paddingRight="@dimen/activity_margin_small"
-                        android:paddingStart="0dp"
-                        android:paddingTop="@dimen/activity_margin_small"
-                        android:src="@drawable/ic_sort"
-                        android:visibility="gone"/>
-                </RelativeLayout>
-            </android.support.v7.widget.Toolbar>
-
+                    <RelativeLayout
+                        android:id="@+id/toolbar_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/ivBack"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:paddingBottom="@dimen/activity_margin_small"
+                            android:paddingTop="@dimen/activity_margin_small"
+                            android:src="@drawable/ic_back"
+                            android:visibility="visible"/>
+                        <TextView
+                            android:id="@+id/tvTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="@dimen/activity_margin"
+                            android:layout_marginStart="@dimen/activity_margin"
+                            android:layout_toEndOf="@+id/ivBack"
+                            android:layout_toLeftOf="@+id/ivSort"
+                            android:layout_toRightOf="@+id/ivBack"
+                            android:layout_toStartOf="@+id/ivSort"
+                            android:gravity="left"
+                            android:text="@string/activity_event_list_title"
+                            android:textColor="@color/text_color_white"
+                            android:textSize="@dimen/text_size_large"
+                            android:textStyle="bold"/>
+                        <android.support.v7.widget.SearchView
+                            android:id="@+id/searchView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:gravity="end"
+                            android:searchIcon="@drawable/ic_search"/>
+                        <ImageView
+                            android:id="@+id/ivFilter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toLeftOf="@+id/searchView"
+                            android:paddingBottom="@dimen/activity_margin_small"
+                            android:paddingTop="@dimen/activity_margin_small"
+                            android:src="@drawable/ic_filter"
+                            android:visibility="gone"/>
+                        <ImageView
+                            android:id="@+id/ivSort"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toLeftOf="@+id/ivFilter"
+                            android:layout_toStartOf="@+id/ivFilter"
+                            android:paddingBottom="@dimen/activity_margin_small"
+                            android:paddingEnd="@dimen/activity_margin_small"
+                            android:paddingLeft="0dp"
+                            android:paddingRight="@dimen/activity_margin_small"
+                            android:paddingStart="0dp"
+                            android:paddingTop="@dimen/activity_margin_small"
+                            android:src="@drawable/ic_sort"
+                            android:visibility="gone"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.Toolbar>
+            </RelativeLayout>
         </android.support.design.widget.AppBarLayout>
 
         <RelativeLayout
