--- a/app/src/main/res/layout/activity_exhibitor_list.xml
+++ b/app/src/main/res/layout/activity_exhibitor_list.xml
@@ -92,10 +92,11 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_toLeftOf="@+id/searchView"
+                            android:layout_toStartOf="@+id/searchView"
                             android:paddingBottom="@dimen/activity_margin_small"
                             android:paddingTop="@dimen/activity_margin_small"
                             android:src="@drawable/ic_filter"
-                            android:visibility="gone"/>
+                            android:visibility="visible"/>
                         <ImageView
                             android:id="@+id/ivSort"
                             android:layout_width="wrap_content"
