--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,11 +108,12 @@
                 <TextView
                     android:id="@+id/tvRefreshData"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/activity_margin_small"
                     android:drawableLeft="@drawable/ic_refresh"
                     android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/activity_margin_small"
+                    android:paddingRight="@dimen/activity_margin_small"
                     android:text="Refresh Data"
                     android:textColor="@color/app_text_color_dark"
                 />
